Fix notes newsletter CTA contrast (#243)
* Fix firefox-newsletter button contrast

* Include more pseudos

--- a/media/css/base/banners/firefox-newsletter.scss
+++ b/media/css/base/banners/firefox-newsletter.scss
@@ -54,6 +54,11 @@
         transition: all 300ms ease-out;
         white-space: nowrap;
 
+        &:link,
+        &:visited {
+            color: $color-black;
+        }
+
         &:hover,
         &:focus,
         &:active {
